--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d18979">  <td>22/11/17 12:14:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:com.Vtiger.TestScript.HomePageTest@71def8f8]">&lt;&lt;AC</td> 
+<tr bgcolor="d18979">  <td>22/11/24 17:31:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:praticepackage.VtigerTest@16610890]">&lt;&lt;AC</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="d18979">  <td>22/11/17 12:14:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:com.Vtiger.TestScript.HomePageTest@71def8f8]">&lt;&lt;AM</td> 
+<tr bgcolor="d18979">  <td>22/11/24 17:31:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:praticepackage.VtigerTest@16610890]">&lt;&lt;AM</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="d18979">  <td>22/11/17 12:14:52</td>   <td>37</td> <td title="&lt;&lt;BaseClass.AS()[pri:0, instance:com.Vtiger.TestScript.HomePageTest@71def8f8]">&lt;&lt;AS</td> 
+<tr bgcolor="d18979">  <td>22/11/24 17:31:47</td>   <td>73</td> <td title="&lt;&lt;BaseClass.AS()[pri:0, instance:praticepackage.VtigerTest@16610890]">&lt;&lt;AS</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="d18979">  <td>22/11/17 12:14:52</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.AT()[pri:0, instance:com.Vtiger.TestScript.HomePageTest@71def8f8]">&lt;&lt;AT</td> 
+<tr bgcolor="d18979">  <td>22/11/24 17:31:47</td>   <td>5</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.AT()[pri:0, instance:praticepackage.VtigerTest@16610890]">&lt;&lt;AT</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="d18979">  <td>22/11/17 12:14:45</td>   <td>-6817</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC()[pri:0, instance:com.Vtiger.TestScript.HomePageTest@71def8f8]">&gt;&gt;BC</td> 
+<tr bgcolor="d18979">  <td>22/11/24 17:31:37</td>   <td>-10107</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC()[pri:0, instance:praticepackage.VtigerTest@16610890]">&gt;&gt;BC</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="d18979">  <td>22/11/17 12:14:46</td>   <td>-5621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:com.Vtiger.TestScript.HomePageTest@71def8f8]">&gt;&gt;BM</td> 
+<tr bgcolor="d18979">  <td>22/11/24 17:31:39</td>   <td>-7844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:praticepackage.VtigerTest@16610890]">&gt;&gt;BM</td> 
 <td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="d18979">  <td>22/11/17 12:14:45</td>   <td>-6833</td> <td title="&gt;&gt;BaseClass.BS()[pri:0, instance:com.Vtiger.TestScript.HomePageTest@71def8f8]">&gt;&gt;BS</td> 
+<tr bgcolor="d18979">  <td>22/11/24 17:31:37</td>   <td>-10126</td> <td title="&gt;&gt;BaseClass.BS()[pri:0, instance:praticepackage.VtigerTest@16610890]">&gt;&gt;BS</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="d18979">  <td>22/11/17 12:14:45</td>   <td>-6828</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.BT()[pri:0, instance:com.Vtiger.TestScript.HomePageTest@71def8f8]">&gt;&gt;BT</td> 
+<tr bgcolor="d18979">  <td>22/11/24 17:31:37</td>   <td>-10118</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.BT()[pri:0, instance:praticepackage.VtigerTest@16610890]">&gt;&gt;BT</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556956098</td>   <td></td> </tr>
-<tr bgcolor="ceb1df">  <td>22/11/17 12:14:48</td>   <td>-3380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.Home()[pri:0, instance:com.Vtiger.TestScript.HomePageTest@71def8f8]">Home</td> 
+<tr bgcolor="ceb1df">  <td>22/11/24 17:31:45</td>   <td>-2206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VtigerTest.add()[pri:0, instance:praticepackage.VtigerTest@16610890]">add</td> 
   <td>main@1556956098</td>   <td></td> </tr>
 </table>
